no cheating ensure

--- a/templates/home_pages/main-content/contest_pages/contest_ques_page.html
+++ b/templates/home_pages/main-content/contest_pages/contest_ques_page.html
@@ -17,7 +17,7 @@
 <div class="pannel_open">
     <button class="clicker" id="clicker" type="button">&#8249;</button>
 </div>
-<meta id='ticketID' ticketID="{{ ticketID }}">
+<meta id='ticketID' ticketID="{{ ticketID }}" timeStart="{{ ticketDate }}">
 <br>
 <div class="question_floor" id="question_floor">
     <div class="question_box">
@@ -94,7 +94,7 @@
 </div>
 
 
-<div id="thankYou" >
+<div id="thankYou" style="display: none;">
     <div id="thankyou_main">
         <!-- <div id="smiley">
             =)
