--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -33,7 +33,7 @@
             </div>
             <div class="row bg-white">
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="/superuser_admin/dashboard/contest" allowfullscreen></iframe>
+                    <iframe id="iframe" class="embed-responsive-item" src="/superuser_admin/dashboard/contest" allowfullscreen></iframe>
                   </div>
             </div>
         </main>
