--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,30 +1,28 @@
 {% extends 'index.html' %}
 
 
-{%  block head %}
+{% block head %}
 
-<title> KBCexams | admin login </title> 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<title> KBCexams | admin login </title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 {% endblock %}
 
 
-{%  block body %}
+{% block body %}
 
 <form action="/superuser_admin" method="post">
-    <div class="form-group">
-      <label for="SuperUsername">Super Username</label>
-      <input type="text" class="form-control" id="SuperUsername" name="SuperUsername" aria-describedby="emailHelp" placeholder="Super Username">
-    </div>
-    <div class="form-group">
-      <label for="InputPassword">Password</label>
-      <input type="password" class="form-control" id="InputPassword" name="InputPassword" placeholder="Password">
-    </div>
-    <div class="form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+  <div class="form-group">
+    <label for="SuperUsername">Super Username</label>
+    <input type="text" class="form-control" id="SuperUsername" name="SuperUsername" aria-describedby="emailHelp"
+      placeholder="Super Username">
+  </div>
+  <div class="form-group">
+    <label for="InputPassword">Password</label>
+    <input type="password" class="form-control" id="InputPassword" name="InputPassword" placeholder="Password">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 
 {% endblock %}
