--- a/templates/admin/dashboard_contest.html
+++ b/templates/admin/dashboard_contest.html
@@ -37,33 +37,26 @@
 </div>
 <hr style="height:2px;color:gray;background-color:gray">
 <table class="table table-dark">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-        </tr>
-    </thead>
     <tbody>
         <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <th scope="col">ContestID</th>
+            <th scope="col">CompletionDate</th>
+            <th scope="col">TicketPrice</th>
+            <th scope="col">TotalSpots</th>
+            <th scope="col">IsActive</th>
+            <th scope="col">SpotsLeft</th>
+
         </tr>
+        {% for contest in all_contest %}
         <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
+            <th scope="row">{{contest[0]}}</th>
+            <td>{{contest[1]}}</td>
+            <td>{{contest[2]}}</td>
+            <td>{{contest[3]}}</td>
+            <td>{{contest[4]}}</td>
+            <td>{{contest[5]}}</td>
         </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-        </tr>
+        {% endfor %}
     </tbody>
 </table>
 {% endblock %}
