--- a/templates/admin/dashboard_contest.html
+++ b/templates/admin/dashboard_contest.html
@@ -3,8 +3,8 @@
 
 
 {% block body %}
-<a class="btn btn-secondary btn-lg btn-block" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
-    aria-controls="collapseExample">
+<a class="btn btn-secondary btn-lg btn-block" data-toggle="collapse" href="#collapseExample" role="button"
+    aria-expanded="false" aria-controls="collapseExample">
     <p style="text-align: center;">Create New Contest</p>
 </a>
 <div class="collapse" id="collapseExample">
@@ -13,8 +13,8 @@
             <form id="CreateContestForm">
                 <div class="form-group">
                     <label for="ContestID">ContestID</label>
-                    <input type="text" class="form-control" id="ContestID" name="ContestID"
-                        aria-describedby="emailHelp" placeholder="eg. Contestid-1">
+                    <input type="text" class="form-control" id="ContestID" name="ContestID" aria-describedby="emailHelp"
+                        placeholder="eg. Contestid-1">
                 </div>
                 <div class="form-group">
                     <label for="CompletionDate">Completion Date</label>
@@ -36,27 +36,57 @@
     </div>
 </div>
 <hr style="height:2px;color:gray;background-color:gray">
-<table class="table table-dark">
-    <tbody>
-        <tr>
-            <th scope="col">ContestID</th>
-            <th scope="col">CompletionDate</th>
-            <th scope="col">TicketPrice</th>
-            <th scope="col">TotalSpots</th>
-            <th scope="col">IsActive</th>
-            <th scope="col">SpotsLeft</th>
+<div class="table-responsive">
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">ContestID</th>
+                <th scope="col">CompletionDate</th>
+                <th scope="col">TicketPrice</th>
+                <th scope="col">TotalSpots</th>
+                <th scope="col">IsActive</th>
+                <th scope="col">SpotsLeft</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for contest in all_contest %}
+            <tr  contestid="{{contest[0]}}" class="accordion-toggle collapsed" id="accordion1"
+                data-toggle="collapse" data-parent="#accordion1" href="#{{contest[0]}}">
+                <td class="expand-button"></td>
+                <th scope="row">{{contest[0]}}</th>
+                <td>{{contest[1]}}</td>
+                <td>{{contest[2]}}</td>
+                <td>{{contest[3]}}</td>
+                <td>{{contest[4]}}</td>
+                <td>{{contest[5]}}</td>
 
-        </tr>
-        {% for contest in all_contest %}
-        <tr>
-            <th scope="row">{{contest[0]}}</th>
-            <td>{{contest[1]}}</td>
-            <td>{{contest[2]}}</td>
-            <td>{{contest[3]}}</td>
-            <td>{{contest[4]}}</td>
-            <td>{{contest[5]}}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+            </tr>
+            <tr class="hide-table-padding">
+                <td></td>
+                <td colspan="3">
+                    <div id="{{contest[0]}}" class="collapse in p-3">
+                        <div class="row">
+                            <div class="col-2">label</div>
+                            <div class="col-6">value 1</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-2">label</div>
+                            <div class="col-6">value 2</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-2">label</div>
+                            <div class="col-6">value 3</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-2">label</div>
+                            <div class="col-6">value 4</div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
