--- a/templates/admin/dashboard_contest.html
+++ b/templates/admin/dashboard_contest.html
@@ -37,7 +37,7 @@
 </div>
 <hr style="height:2px;color:gray;background-color:gray">
 <div class="table-responsive">
-    <table class="table">
+    <table class="table table-dark">
         <thead>
             <tr>
                 <th scope="col">#</th>
@@ -51,8 +51,8 @@
         </thead>
         <tbody>
             {% for contest in all_contest %}
-            <tr  contestid="{{contest[0]}}" class="accordion-toggle collapsed" id="accordion1"
-                data-toggle="collapse" data-parent="#accordion1" href="#{{contest[0]}}">
+            <tr contestid="{{contest[0]}}" class="accordion-toggle collapsed" id="accordion1" data-toggle="collapse"
+                data-parent="#accordion1" href="#{{contest[0]}}">
                 <td class="expand-button"></td>
                 <th scope="row">{{contest[0]}}</th>
                 <td>{{contest[1]}}</td>
@@ -65,24 +65,37 @@
             <tr class="hide-table-padding">
                 <td></td>
                 <td colspan="3">
-                    <div id="{{contest[0]}}" class="collapse in p-3">
-                        <div class="row">
-                            <div class="col-2">label</div>
-                            <div class="col-6">value 1</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-2">label</div>
-                            <div class="col-6">value 2</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-2">label</div>
-                            <div class="col-6">value 3</div>
-                        </div>
-                        <div class="row">
-                            <div class="col-2">label</div>
-                            <div class="col-6">value 4</div>
-                        </div>
+                    <div id="{{contest[0]}}" class="collapse in p-3" style="text-align: center;">
+                        <span id="{{contest[0]}}_list" style="float: left;width: 50%;">
+
+                        </span>
+
+                        <form id="contestPrize" contestid={{contest[0]}}  style="float: left;width: 50%;">
+                            <div class="form-group">
+                                <label for="StartRank"><small>Start Rank</small></label>
+                                <input type="text" class="form-control" id="StartRank" name="StartRank"
+                                    aria-describedby="emailHelp" placeholder="eg. 1">
+                            </div>
+                            <div class="form-group">
+                                <label for="EndRank"><small>End Rank</small></label>
+                                <input type="text" class="form-control" id="EndRank" name="EndRank"
+                                    placeholder="eg. 10">
+                            </div>
+                            <div class="form-group">
+                                <label for="Prize"><small>Prize</small></label>
+                                <input type="text" class="form-control" id="Prize" name="Prize"
+                                    placeholder="eg. 10000">
+                            </div>
+                            <label class="radio-inline">
+                                <input type="checkbox" name="delete">Delete
+                              </label>
+                              <label class="radio-inline">
+                                <input type="checkbox" name="add">Add
+                              </label>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
                     </div>
+                    
                 </td>
             </tr>
             {% endfor %}
